tests/invalid/bad_field.err_exp
bad_field.m:036: In clause for predicate `p'/2:
bad_field.m:036:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`ac_fieldname'/1.[39;49m
bad_field.m:036:   [38;5;226m(Did you mean `abc_fieldname'?)[39;49m
